gcc/testsuite/g++.dg/init/array26.C
// PR c++/42058
// { dg-options "" }

struct A;

struct B
{
  A a; // { dg-error "incomplete type" }
};

B b[1] = (B[]) { 0 };
